# llm-browser-driver

./: AGENTS.md  BROCHURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
docs/: PRD-COMPREHENSIVE.md  PRD-RICH-REPORTS.md  PRD.md
examples/: example_basic.py  example_batch.py  example_form_filling.py  example_retry.py  example_spec_driven.py
legacy/: 04_hybrid_exploratory.py  05_hybrid_exploratory.py  07_llm_direct.py  08_sync_hybrid.py  09_interactive_exploration.py
src/: 02_exploratory_test.py  SPIKE_NOTES.md
src/llm_browser_driver/: __init__.py  actions.py  agent.py  cicd.py  cli.py  config.py  llm_client.py  logging.py  report.py  retry.py  selector.py  spec_parser.py  state.py  tracing.py
src/spike_deprecated/: 01_exploratory_test.py  03_exploratory_test.py  06_quick_test.py
tests/: conftest.py
tests/unit/: test_cicd.py  test_config.py  test_llm_client.py  test_logging.py  test_report.py  test_retry.py  test_selector.py  test_spec_parser.py  test_state.py  test_tracing.py
