[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-browser-driver"
version = "0.1.0"
description = "Autonomous AI-driven web testing and exploration with Playwright"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Microscaler Team" },
]
keywords = [
    "testing",
    "e2e",
    "playwright",
    "llm",
    "ai",
    "browser-automation",
    "qa",
    "exploratory-testing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "playwright>=1.40",
    "openai>=1.0",
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
    "ruff>=0.4",
    "mypy>=1.0",
    "types-pyyaml>=6.0",
    "build>=1.0",
]
all = [
    "llm-browser-driver[dev]",
]

[project.scripts]
llm-browser-driver = "llm_browser_driver.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_browser_driver"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line length — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["llm_browser_driver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
